--- a/recipes/skia/all/test_package/CMakeLists.txt
+++ b/recipes/skia/all/test_package/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.15)
 project(PackageTest CXX)
 
-find_package(skia CONFIG REQUIRED)
+find_package(bober-skia CONFIG REQUIRED)
 
 
 
 add_executable(example src/example.cpp)
-target_link_libraries(example skia::skia)
+target_link_libraries(example bober-skia::bober-skia)
